# stat-analysis-system

./: .gitignore  AutoTest8080.cs  CHANGELOG.md  DbProcedureCaller.csproj  DbProcedureCaller.manifest  HttpTest.cs  SimpleHttpServer.cs  SimpleLoginTest.cs  TestUserManagement.ps1  WiNEX_PACS_Schema.md  api_result.json  app.py  auto_sync.bat  check_table_structure.ps1  check_tables.sql  create_user_table.sql  query_encounter.ps1  query_report_encounter.ps1  query_table.ps1  result.json  search_encounter.ps1  sql_query.txt  test.html  test_api.ps1  test_fixed.ps1  test_server.ps1  变更记录.md  快速创建用户表.sql  放射科工作量统计查询.sql  数据脚本.sql  设计文档_数据库连接加密方案.md
DbProcedureCaller/: ARCHITECTURE.md  DbProcedureCaller.csproj  ModularMainForm.cs  app.manifest
OllamaDevHelper/: Program.cs
bak/: extract_patient_types.py  extract_patient_types_doc.py  extract_pdf_text.py  read_pdf.py  templates  test_encoding.txt  test_ui_styles.py  update_schema.py
bak/misc/fms/: CMakeLists.txt
bak/misc/fms/src/: Date.cpp  FinanceManager.h  Transaction.cpp
scripts/: TestDatabase.cs  TestDatabase_Fixed.ps1  TestEncryptionMatch.cs  check_database_data.py  check_table_structure.py  create_doctor_tables.sql  create_exam_tables.sql  create_param_config_tables.sql  create_stat_config_tables.sql  create_stat_menu_config.sql  create_stat_procedures.sql  create_stat_tables.sql  create_test_tables.sql  init_database.sql  query_exam_types.py  保存配置.ps1  修改用户密码.bat  修改用户密码.ps1  执行科室映射.sql  查询执行科室数据.sql  添加用户数据.bat  统计_审核医生工作量.sql  统计_执行科室汇总.sql  统计_技师工作量.sql  统计_系统信息.sql  统计_系统状态汇总.sql  配置中心功能分析.md
(+83 files in other folders)
